portfolio-container re-established

--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,6 @@
+<!-- will not do a lot in this file; most of code will be written in separate components -->
+
+<!-- React will inject whole app into whichever element has the root id -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
