updated title for tab

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
-    <title>Criste Phillips, React Portfolio</title>
+    <title>Criste Phillips, Digital Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
